# settlers_demo

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h  grid.h  road.h  settings.h  shader.h  tile.h  utils.h
include/glad/: glad.h
shader/: objectShader.fs  objectShader.vs
shaders/: objectShader.fs
src/: camera.cc  camera.cpp  glad.c  grid.cc  grid.cpp  main.cc  main.cpp  shader.cpp  tile.cpp  utils.cpp
